apps/media/hdhr2xmltv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: hdhr2xmltv
    app.kubernetes.io/name: hdhr2xmltv
  name: hdhr2xmltv
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: hdhr2xmltv
      app.kubernetes.io/name: hdhr2xmltv
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hdhr2xmltv
        app.kubernetes.io/name: hdhr2xmltv
    spec:
      containers:
        - name: hdhr2xmltv
          image: hdhr2xmltv
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "105Mi"
              cpu: "15m"
            limits:
              memory: "128Mi"
              cpu: "100m"

          volumeMounts:
            - mountPath: /mnt/media
              name: media
            - mountPath: /data
              name: data

      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: smb-media-claim
        - name: data
          emptyDir:
            sizeLimit: 500Mi
