apps/media/hdhr2xmltv/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hdhr2xmltv-httproute
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: default
  hostnames:
    - hdhr2xmltv.x.pmcd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hdhr2xmltv
          kind: Service
          namespace: media
          port: 80
